improve performance and update mods

--- a/.minecraft/config/jei/ingredient-list-mod-sort-order.ini
+++ b/.minecraft/config/jei/ingredient-list-mod-sort-order.ini
@@ -3,15 +3,12 @@ Patchouli
 Terramity
 Aether: Lost Content
 Ancient Aether
-Better End
 Create
 Deep Aether
 Dynamic Trees
 Dynamic Trees Plus
-Dynamic Trees for Better End
 Dynamic Trees for Quark
 Dynamic Trees for The Aether
-Dynamic Trees for The Twilight Forest
 Dynamic Trees for Vinery
 Immersive Aircraft
 Immersive Weathering
@@ -26,7 +23,6 @@ Sophisticated Storage
 Supplementaries
 The Aether
 The Midnight
-The Twilight Forest
 [Let's Do] Bakery
 [Let's Do] Beachparty
 [Let's Do] Brewery
@@ -34,7 +30,6 @@ The Twilight Forest
 [Let's Do] HerbalBrews
 [Let's Do] Vinery
 Alex's Mobs
-Better Nether
 Bosses of Mass Destruction
 Cataclysm Mod
 End Remastered
@@ -49,8 +44,6 @@ Rats
 Small Ships
 Apotheosis
 Chipped
-L2 Complements
-L2 Hostility
 Relics
 Ice and Fire: Spellbooks
 Iron's RPG Tweaks
@@ -58,3 +51,7 @@ Iron's Spells 'n Spellbooks
 Biomes O' Plenty
 Dynamic Trees for Biomes o' Plenty
 Alex's Caves
+Better End
+Better Nether
+Dynamic Trees for Better End
+Ascendant Mobs
