--- a/.packignore
+++ b/.packignore
@@ -15,6 +15,7 @@
 .minecraft/schematics
 .minecraft/screenshots
 .minecraft/server-resource-packs
+.minecraft/servers.dat
 .minecraft/servers.dat_old
 .minecraft/shaderpacks
 .minecraft/texturepacks
