--- a/instance.cfg
+++ b/instance.cfg
@@ -1,7 +1,7 @@
 [General]
 ConfigVersion=1.2
 iconKey=default
-name=JustForHomies1.5
+name=JustForDaHomies1.0
 InstanceType=OneSix
 JoinServerOnLaunch=false
 OverrideCommands=false
@@ -31,10 +31,10 @@ ManagedPackType=
 ManagedPackVersionID=
 ManagedPackVersionName=
 Profiler=
-lastLaunchTime=1725319055882
+lastLaunchTime=1725413236739
 linkedInstances=[]
-lastTimePlayed=2749
-totalTimePlayed=10228
+lastTimePlayed=58
+totalTimePlayed=145
 
 [UI]
 mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x6{\0\0\0\x6\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x4\x87\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
